--- a/style/section-main.css
+++ b/style/section-main.css
@@ -13,7 +13,7 @@
 }
 .info p{
   font-size: 1.5rem;
-  font-family:'Caviar Dreams' ;
+  font-family:'roboto' ;
   text-align: justify;
 }
 .buttons{
