--- a/style/section-main.css
+++ b/style/section-main.css
@@ -2,9 +2,7 @@
   padding:0 3rem 1rem;
   color: var(--secondary);
 }
-.info{
-  max-width: 1500px;
-}
+
 .info h1{
   font-size: 10rem;
   font-family: "font ninja";
@@ -20,4 +18,32 @@
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
+}
+
+@media (min-width: 450px){
+  .info {
+    width: 100%;
+  }
+  .info h1{
+    font-size: 5rem;
+  }
+  .info p{
+    font-size: 15px;
+  }
+}
+@media (max-width: 450px){
+  .info h1{
+    font-size: 3rem;
+  }
+  .info p{
+    font-size: 15px;
+  }
+}
+@media (max-width: 350px){
+  .info h1{
+    font-size: 2rem;
+  }
+  .info p{
+    font-size: 12px;
+  }
 }
