--- a/style/main.css
+++ b/style/main.css
@@ -31,6 +31,7 @@
 
 body {
   overflow:hidden;
+  z-index: -9999;
 }
 
 #background{
@@ -58,6 +59,5 @@ body {
   height: 100vh;
   object-fit: cover;
   object-position: 50% 0%;
-  
 }
 
