--- a/style/main.css
+++ b/style/main.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  overflow:hidden;
+  overflow: hidden;
   z-index: -9999;
 }
 
@@ -55,9 +55,13 @@ body {
 }
 .image{
   display: block;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   object-fit: cover;
   object-position: 50% 0%;
+}
+#image{
+  display: flex;
+  width: auto;
 }
 
