--- a/style/menu.css
+++ b/style/menu.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between  ;
+  top: 0;
+  z-index:99999;
 }
 #menu header{
   display: flex;
@@ -12,6 +14,7 @@
   align-items: center;
   padding: 2rem 5rem;
   transition: all 0.4s;
+  z-index:99999999;
 }
 
 #menu #logo{
